fix: word break CSS caused long URLs to overflow message box

--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -120,6 +120,7 @@ a {
   margin: 10px;
   flex-grow: 1;
   position: relative;
+  word-break: break-word;
 }
 
 /* .scam-item .message-box::before {
